Updating Jupyter notebook checkpoint

--- a/project2/erik_kathy_sweeny/PollutionDataClean.ipynb
+++ b/project2/erik_kathy_sweeny/PollutionDataClean.ipynb
@@ -3286,7 +3286,10 @@
     "# Final Los Angeles DataFrame to be Loaded into database\n",
     "\n",
     "FinalLaDf = pd.concat([LaAnnualAvg, LaPopDf], axis=1, join=\"outer\")\n",
-    "FinalLaDf"
+    "FinalLaDf\n",
+    "\n",
+    "# Exporting LA Data Frame to a csv file to be imported into database\n",
+    "FinalLaDf.to_csv(\"../output_data/FinalLaDf.csv\", index=True, header=True)"
    ]
   },
   {
@@ -3514,7 +3517,10 @@
     "# Final New York DataFrame to be Loaded into database\n",
     "\n",
     "FinalNyDf = pd.concat([NyAnnualAvg, NyPopDf], axis=1, join=\"outer\")\n",
-    "FinalNyDf"
+    "FinalNyDf\n",
+    "\n",
+    "# Exporting LA Data Frame to a csv file to be imported into database\n",
+    "FinalNyDf.to_csv(\"../output_data/FinalNyDf.csv\", index=True, header=True)"
    ]
   }
  ],
